--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,8 @@ venv.bak/
 
 
 # End of https://www.gitignore.io/api/macos,python,jetbrains
+
+# config files
+/config/*
+!/config/default-config.py
+!/config/default-keys.py
